--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -431,7 +431,9 @@
                             <br/>
                             <t t-if="with_links">
                                 <h3>Clothing Store:</h3>
-                                <h5 style="padding:10px;" class="border-gradient-rounded"><img src="/website_pinetwork_games_odoo/static/src/img/logo-opensource-expert.png" width="110px" height="110px" /><br/><strong>Clothing Store</strong><div style="">Author: César Cordero</div><div><div style="display: inline"><a href="/youtube-store" target="_blank">Youtube Store</a></div> <div style="display: inline">|</div> <div style="display: inline"><a href="/spring-store" target="_blank">Spring Store</a></div></div></h5>
+                                <h5 style="padding:10px;" class="border-gradient-rounded">
+                                    <iframe style="border-radius:24px;border:none" src="https://embed.creator-spring.com/widget?slug=my-store-10dea32&amp;per=30&amp;currency=&amp;page=1&amp;layout=carousel-wide&amp;theme=light" title="César OpenSource Store Merch store powered by Spring" width="100%" height="420" data-reactroot=""></iframe>
+                                </h5>
                             </t>
                             <br/>
                             <h3>Udemy courses (all courses with personalized Certificate of Completion):</h3>
