--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1252,7 +1252,30 @@
                         <div>
                             <script defer="defer" src="https://www.livecoinwatch.com/static/lcw-widget.js"></script> <div class="livecoinwatch-widget-6" lcw-coin="_______PI" lcw-base="USD" lcw-period="d" lcw-color-tx="#ffffff" lcw-color-bg="#1f2434" lcw-border-w="0" ></div>
                         </div>
-                        <div style="color: #ffffff !important; background-color: #1f2434 !important;">
+                        <div style="color: #ffffff !important; background-color: #1f2434 !important;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
+                            <div>
+                                <div style="display: inline">
+                                    Payment (50% discount)
+                                </div>
+                            </div>
+                            <div style="word-break: break-word;">
+                                <div>
+                                    <del>
+                                        <div style="display: inline">Pi <t t-esc="amount*2" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd*2" /></div> 
+                                        <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
+                                            <i class="fa-solid fa-circle-info"></i>
+                                        </div>
+                                    </del>
+                                </div>
+                                <div>
+                                    <div style="display: inline">Pi <t t-esc="amount" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd" /></div> 
+                                    <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div style="color: #ffffff !important; background-color: #1f2434 !important;"  t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                             <div>
                                 <div style="display: inline">
                                     Current minimum payment
