--- a/website_pinetwork_odoo/views/admin_apps_v.xml
+++ b/website_pinetwork_odoo/views/admin_apps_v.xml
@@ -55,6 +55,8 @@
                                 <field name="amount_price"/>
                                 <field name="amount_price_topay_usd"/>
                                 <field name="amount_price_apikey"/>
+                                <field name="discount_active"/>
+                                <field name="discount_percentage"/>
                             </group>
                             <group string="Referrers config">
                                 <field name="pi_referrer_amount"/>
