--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1276,7 +1276,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div t-else>
+                                <div t-else="">
                                     <div>
                                         <div style="display: inline">Pi <t t-esc="amount" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd" /></div> 
                                         <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
