--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1375,9 +1375,9 @@
                         
                         <div id="loading_word_under" style="margin-top:10px; width: 100%; display: none;"></div>
                         
-                        <div t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                        <div t-if="discount_active and discount_percentage" style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                             <div style="margin-bottom:5px" class="border-bottom">
-                                <h5 translate="no"><strong><div style="display:inline;">#LatinChain #ThisSeason</div></strong></h5>
+                                <h5 translate="no"><strong><div style="display:inline;">#SeasonDiscount <t t-esc="discount_percentage"/>%</div></strong></h5>
                             </div>
                             <div style="margin-bottom:5px">
                                 <a href="/pinetwork"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.101" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
