--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -327,17 +327,42 @@
                                                 <br/>
                                             </div>
                                         </div>
-                                        <div style="margin-top:5px;">
-                                            <div style="display: inline">
-                                                Current minimum payment
+                                        
+                                        <div>
+                                            <div>
+                                                <div style="display: inline" t-if="discount_active and discount_percentage">
+                                                    Seasonal discount (<t t-esc="discount_percentage" />%)
+                                                </div>
+                                                <div style="display: inline" t-if="not discount_active">
+                                                    Payment amount
+                                                </div>
+                                            </div>
+                                            <div style="word-break: break-word;" translate="no">
+                                                <div t-if="discount_active and discount_percentage">
+                                                    <del>
+                                                        <div style="display: inline">Pi <t t-esc="amount*(100/discount_percentage)" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd" /></div> 
+                                                        <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </div>
+                                                    </del>
+                                                    <div>
+                                                        <div style="display: inline">Pi <t t-esc="amount" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd - amount_price_topay_usd*(discount_percentage/100)" /></div> 
+                                                        <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div t-else="">
+                                                    <div>
+                                                        <div style="display: inline">Pi <t t-esc="amount" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd" /></div> 
+                                                        <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div style="word-break: break-word;">
-                                            <div style="display: inline">Pi <t t-esc="amount" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd" /></div> 
-                                            <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
-                                                <i class="fa-solid fa-circle-info"></i>
-                                            </div>
-                                        </div>
+                                        
                                         <div style="margin-top:5px" class="justify-content-center">
                                             <input t-att-value="amount" id="pi_donate" name="pi_donate" type="number" min="0" step="0.01" class="numeric-decimal form-control" style="display: none;" lang="en-US"/>
                                             <button id="button_click" name="button_click" class="col-12 btn btn-success fw-bold text-black border-success" disabled="true" style="border: 2px solid; margin-bottom: 5px;"><div><i class="fa-solid fa-money-bill-transfer"></i></div><div>Donate to unblock with <span t-esc="amount" /> Pi for 30 days from today</div><div style="font-size:80%;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">Earn Latin points (<t t-esc="amount_latin_pay" />)</div></button>
