--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -431,7 +431,7 @@
                             <br/>
                             <t t-if="with_links">
                                 <div style="margin-bottom:5px" class="border border-top-0">
-                                    <h3>Clothing Store:</h3>
+                                    <h3>Clothing and Collectibles Store:</h3>
                                 </div>
                                 <h5 style="padding:10px;" class="border-gradient-rounded">
                                     <iframe style="border-radius:24px;border:none" src="https://embed.creator-spring.com/widget?slug=my-store-10dea32&amp;per=30&amp;currency=&amp;page=1&amp;layout=carousel-wide&amp;theme=light" title="César OpenSource Store Merch store powered by Spring" width="100%" height="420" data-reactroot=""></iframe>
