--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1531,6 +1531,30 @@
                             </div>
                         </div>
                         
+                        <div style="margin-bottom:5px; padding:10px; width: 100%; text-align: center;" class="border-gradient-rounded showInterstitialAd">
+                            <div style="margin-bottom:5px" class="border-bottom">
+                                <h5 translate="no"><strong><div style="display:inline;">#Dev &#128187;</div></strong></h5>
+                            </div>
+                            <div style="margin-bottom:5px">
+                                <!--<div>Subscribe here:</div>
+                                <div style="filter: contrast(100%) !important;">
+                                &#128073;
+                                <a href="https://www.youtube.com/@rockcesar85" target="_blank">
+                                    <img src="/website_pinetwork_games_odoo/static/src/img/youtube.png" alt="Youtube" class="img-fluid" style="max-width: 130px" width="100%" height="50px" />
+                                </a>
+                                &#128072;
+                                </div>-->
+                                <!--
+                                <div style="margin-bottom:5px" translate="no">
+                                    <button style="max-width: 130px" class="col-12 btn btn-danger font-weight-bold youtube-social" ><div style="display:inline;"><i class="fab fa-youtube"></i></div> <div style="display:inline;">channel</div></button>
+                                </div>
+                                -->
+                                <div style="margin-bottom:5px">Supported by César OpenSource Expert: Software Engineer, Entrepreneur, Clothing Store and Youtuber.</div>
+                                
+                                <img src="/website_pinetwork_games_odoo/static/src/img/logo-opensource-expert.png" alt="" class="img-fluid rounded" style="width: 100%; height: 100%; max-width: 250px; max-height: 250px;" />
+                            </div>
+                        </div>
+                        
                         <!--<div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                             <ins class="adsbygoogle"
                                  style="display:block"
