--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1549,7 +1549,7 @@
                                     <button style="max-width: 130px" class="col-12 btn btn-danger font-weight-bold youtube-social" ><div style="display:inline;"><i class="fab fa-youtube"></i></div> <div style="display:inline;">channel</div></button>
                                 </div>
                                 -->
-                                <div style="margin-bottom:5px">Supported by César OpenSource Expert: Software Engineer, Entrepreneur, Clothing Store and Youtuber.</div>
+                                <div style="margin-bottom:5px">Supported by César OpenSource Expert: Software Engineer, Entrepreneur, Clothing Design and Youtuber.</div>
                                 
                                 <img src="/website_pinetwork_games_odoo/static/src/img/logo-opensource-expert.png" alt="" class="img-fluid rounded" style="width: 100%; height: 100%; max-width: 250px; max-height: 250px;" />
                             </div>
