--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1551,7 +1551,7 @@
                                 -->
                                 <div style="margin-bottom:5px" translate="no">Supported by César OpenSource Expert: Software Engineer, Entrepreneur, Clothing Design and Youtuber.</div>
                                 
-                                <img src="/website_pinetwork_games_odoo/static/src/img/logo-opensource-expert.png" alt="" class="img-fluid rounded" style="width: 100%; height: 100%; max-width: 250px; max-height: 250px;" />
+                                <img src="/website_pinetwork_games_odoo/static/src/img/logo-opensource-expert.png?v=1.101" alt="" class="img-fluid rounded" style="width: 100%; height: 100%; max-width: 250px; max-height: 250px;" />
                             </div>
                         </div>
                         
