--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1232,7 +1232,7 @@
                     <div translate="no" class="justify-content-left text-left p-3 mb-2" style="color: #ffffff !important; background-color: #1f2434 !important">
                         <div class="row" style="margin-bottom: 5px;">
                             <div style="text-align:left;" class="col-12">
-                                <img src="/website_pinetwork_games_odoo/static/src/img/pihackathon_badge_top.png?v=1.102" class="img-fluid" style="border-radius: 20px;" width="150px" height="50px" />
+                                <img src="/website_pinetwork_games_odoo/static/src/img/pihackathon_badge_top.png?v=1.102" class="img-fluid" width="150px" height="50px" />
                             </div>
                         </div>
                         <div class="row">
