--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -946,7 +946,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.638"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.639"></script>
                     
                     <script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
@@ -1232,7 +1232,7 @@
                     <div translate="no" class="justify-content-left text-left p-3 mb-2" style="color: #ffffff !important; background-color: #1f2434 !important">
                         <div class="row" style="margin-bottom: 5px;">
                             <div style="text-align:left;" class="col-12">
-                                <img src="/website_pinetwork_games_odoo/static/src/img/pihackathon_badge_top.png?v=1.102" class="img-fluid" width="150px" height="50px" />
+                                <img src="/website_pinetwork_games_odoo/static/src/img/pihackathon_badge_top.png?v=1.102" style="cursor: pointer;" class="img-fluid pi-hackathon-info" width="150px" height="50px" />
                             </div>
                         </div>
                         <div class="row">
@@ -1812,7 +1812,7 @@
                             <div class="showInterstitialAd">
                                 <img src="/website_pinetwork_games_odoo/static/src/img/pihackathon_badge.jpg" alt="LatinChain" class="img-fluid rounded" style="max-width: 350px" width="100%" height="170px" />
                                 <br/>
-                                <button id="vote" class="btn btn-info" style="margin-top: 5px">Pi Hackathon winners</button><br/><!--<strong t-if="mainnet == 'Testnet ON'">Testnet ON<br/></strong>--><!--<strong t-if="mainnet == 'Mainnet ON'">Mainnet ON. Ready to play.<br/></strong><br/>-->
+                                <button class="btn btn-info pi-hackathon-info" style="margin-top: 5px">Pi Hackathon winners</button><br/><!--<strong t-if="mainnet == 'Testnet ON'">Testnet ON<br/></strong>--><!--<strong t-if="mainnet == 'Mainnet ON'">Mainnet ON. Ready to play.<br/></strong><br/>-->
                                 
                                 <br/>
                             </div>
