--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -149,7 +149,7 @@
                                 });
                                 
                                 $( ".latinchain-ecosystem" ).click(function() {
-                                    $.colorbox({href:"https://ecosystem.latin-chain.com", iframe:true, width: "100%", height: "100%", maxWidth: "100%", maxHeight: "100%"});
+                                    $.colorbox({href:"https://ecosystem.latin-chain.com", iframe:true, fixed: true, width: "100%", height: "100%", maxWidth: "100%", maxHeight: "100%"});
                                 });
                             });
                         </script>
