--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -600,7 +600,7 @@
                                     <h5 translate="no">LatinChain Token foundations</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    LatinChain Token is based on the LatinChain Platform project:<br/>
+                                    LatinChain Token is based on the LatinChain Platform project (online since 2021):<br/>
                                     Mainnet: https://latinchain.pinet.com<br/>
                                     Testnet: https://latinchaintest9869.pinet.com
                                 </div>
