--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -610,7 +610,7 @@
                                     <h5 translate="no">Max Supply</h5>
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
-                                    100,000,000 LatinChain</br>
+                                    100,000,000 LatinChain<br/>
                                     100,000,000,000 Pi
                                 </div>
                             </div>
