--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -601,7 +601,7 @@
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
                                     <strong>
-                                        LatinChain Token is based on the LatinChain Platform project (online since 2021):<br/><br/>
+                                        LatinChain Token is based on the LatinChain Platform project (online since 2021).<br/>
                                         Mainnet:<br/>https://latinchain.pinet.com<br/>
                                         Testnet:<br/>https://latinchaintest9869.pinet.com
                                     </strong>
