--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -614,7 +614,7 @@
                                 <div style="margin-bottom:5px; padding: 5px">
                                     <strong>
                                         100,000,000 LatinChain<br/>
-                                        100,000,000,000 Pi
+                                        100,000,000,000 Pi (Pi Network)
                                     </strong>
                                 </div>
                             </div>
@@ -624,7 +624,7 @@
                                 </div>
                                 <div style="margin-bottom:5px; padding: 5px">
                                     <strong>
-                                        1,000 LatinChain | 1,000 Pi
+                                        1,000 LatinChain | 1,000 Pi (Pi Network)
                                     </strong>
                                 </div>
                             </div>
